# spectrum-impl

./: .envrc  .gitignore  .pylintrc  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  experiments.json  experiments.json.example  shell.nix
.cargo/: config
benches/: crypto_benchmarks.rs
data/: benchmark_diff.sh  make_experiments.py  plot.py  plot_benchmark_diff.py  run_experiments.sh
experiments/: Cargo.toml  __init__.py  __main__.py  cloud.py  image.json  main.tf  packer.py  run.py  system.py  util.py
experiments/config/: publisher.service  sysctl.conf  viewer@.service
experiments/dissent/: __init__.py  args.py  install.sh  main.pkr.hcl  main.tf  ssh.py
experiments/dissent/config/: broadcaster.conf  broadcaster.conf.template  client.conf  client.conf.template  server.conf  server.conf.template
experiments/dissent/modules/secgroup/: main.tf
experiments/express/: .terraform.lock.hcl  __init__.py  args.py  install.sh  main.pkr.hcl  main.tf  packer.json  ssh.py
experiments/express/modules/secgroup/: main.tf
experiments/modules/image/: main.tf
experiments/modules/net/: main.tf
experiments/riposte/: .terraform.lock.hcl  __init__.py  install.sh  main.pkr.hcl  main.tf  packer.json
experiments/riposte/config/: server.go  sysctl.conf  types.go.template
experiments/riposte/modules/secgroup/: main.tf
experiments/spectrum/: .terraform.lock.hcl  __init__.py  args.py  compile.sh  install.sh  main.pkr.hcl  main.tf  packer.json  run.py  ssh.py
experiments/spectrum/config/: broadcaster@.service  etcd.conf  etcd.template  leader.service  publisher.service  spectrum.service.template  viewer@.service  worker@.service
experiments/spectrum/modules/secgroup/: main.tf
experiments/src/: compile.rs  config.rs  infrastructure.rs  main.rs
experiments/src/data/: aws-credentials.template  nginx.conf  sysctl.conf  test.json  worker@.service.template
experiments_new/: compile.sh  image.json  install.sh  main.tf  requirements.txt  run.py  ssh.py  welcome.txt
experiments_new/config/: leader.service  publisher.service  result  worker@.service
proto/: health.proto  prototest.proto  spectrum.proto
spectrum/: Cargo.toml  build.rs
spectrum/benches/: crypto_benchmarks.rs
spectrum/data/: ca.crt  ca.key  gen_certs.sh  openssl.cnf  server.crt  server.key  server.req
spectrum/proto/: protocol.proto  spectrum.proto
spectrum/src/: accumulator.rs  bytes.rs  cli.rs  experiment.rs  leader.rs  lib.rs  net.rs  publisher.rs
spectrum/src/client/: connections.rs  mod.rs  viewer.rs
spectrum/src/config/: etcd.rs  factory.rs  inmem.rs  store.rs
spectrum/src/crypto/: dpf.rs  field.rs  group.rs  lss.rs  mod.rs  prg.rs  vdpf.rs
spectrum/src/experiment/: compile.rs  infrastructure.rs
spectrum/src/experiment/data/: aws-config.template  test.json
spectrum/src/protocols/: accumulator.rs  insecure.rs  mod.rs  secure.rs  wrapper.rs
spectrum/src/services/: discovery.rs  health.rs  mod.rs  quorum.rs  retry.rs
spectrum/src/worker/: audit_registry.rs  client_registry.rs  mod.rs  service_registry.rs
spectrum/tests/: main.rs
spectrum_primitives/: Cargo.toml  build.rs
spectrum_primitives/benches/: crypto_benchmarks.rs
spectrum_primitives/proto/: integer.proto
spectrum_primitives/src/: algebra.rs  bytes.rs  dpf.rs  field.rs  group.rs  lib.rs  lss.rs  prg.rs  sharing.rs  util.rs  vdpf.rs
spectrum_primitives/src/constructions/: aes_prg.rs  baby.rs  jubjub.rs  mod.rs  tests.rs
spectrum_primitives/src/dpf/: definition.rs  insecure.rs  mod.rs  multi_key.rs  two_key.rs
spectrum_primitives/src/pir/: definition.rs  insecure.rs  linear.rs  mod.rs
spectrum_primitives/src/prg/: base.rs  definition.rs  group.rs  mod.rs  seed_homomorphic.rs
spectrum_primitives/src/vdpf/: definition.rs  field.rs  insecure.rs  mod.rs  multi_key.rs  two_key.rs  two_key_pub.rs
spectrum_protocol/: Cargo.toml  build.rs
spectrum_protocol/proto/: integer.proto  protocol.proto  spectrum.proto
spectrum_protocol/src/: accumulator.rs  definition.rs  insecure.rs  lib.rs  secure.rs  tests.rs  wrapper.rs
src/: bytes.rs  cli.rs  client.rs  config.rs  experiment.rs  health.rs  leader.rs  lib.rs  main.rs  net.rs  publisher.rs  quorum.rs  server.rs  sync.rs  worker.rs
src/client/: connections.rs  mod.rs  viewer.rs
src/config/: etcd.rs  factory.rs  inmem.rs  mod.rs  store.rs  test_macros.rs
src/crypto/: byte_utils.rs  dpf.rs  field.rs  group.rs  lss.rs  mod.rs  msg.rs  prg.rs  protocols.rs  vdpf.rs
src/experiment/: compile.rs  config.rs  infrastructure.rs  inner.rs  mod.rs
src/experiment/data/: broadcaster@.service.template  nginx.conf.template  spectrum.service.template  viewer@.service.template
src/protocols/: accumulator.rs  audit.rs  insecure.rs  mod.rs  protocols.rs  secure.rs  table.rs  wrapper.rs
src/services/: discovery.rs  mod.rs  quorum.rs  retry.rs
src/worker/: accumulator.rs  aggregator.rs  audit_registry.rs  check_registry.rs  client_registry.rs  mod.rs  service_registry.rs
tests/: main.rs
