[package]
name = "spectrum-impl"
version = "0.1.0"
authors = ["Zachary Newman <zjn@mit.edu>", "Sacha Servan-Schreiver <3s@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
prost = "0.6"
bytes = "0.4"
tonic = "0.1.1"
log = "0.4"
simplelog = "^0.7.4"
tokio = { version = "0.2", features = [ "macros", "signal" ] }
async-trait = "0.1.22"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.1.1"

[dev-dependencies]
proptest = "0.9.4"
