[package]
name = "spectrum-impl"
version = "0.1.0"
authors = ["Zachary Newman <zjn@mit.edu>", "Sacha Servan-Schreiver <3s@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
futures = "0.3"
openssl = "0.10.28"
prost = "0.6"
rand = "0.7.3"
bytes = "0.4"
tonic = "0.1.1"
log = "0.4"
simplelog = "^0.7.4"
tokio = { version = "0.2.13", features = [ "macros", "signal", "sync" ] }
rug = "1.7"
async-trait = "0.1.22"
chrono = "0.4"
futures-retry = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
port_check = "0.1.5"
derivative="2.0.2"  # https://github.com/rust-lang/rust/issues/26925

[build-dependencies]
tonic-build = "0.1.1"

[dev-dependencies]
proptest = "0.9.4"
proptest-derive = "0.1.2"
criterion = "0.3.0"

[[bench]]
name = "crypto_benchmarks"
harness = false
