[package]
name = "spectrum-impl"
version = "0.1.0"
authors = ["Zachary Newman <zjn@mit.edu>", "Sacha Servan-Schreiber <3s@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["etcd-tests"]
etcd-tests = []  # run etcd integration tests

[profile.dev]
opt-level = 1  # reasonable mix of compile/run speed

[profile.release]
lto = "thin"
debug = false  # for profiling; bigger binaries but not any slower
codegen-units = 1  # makes it take a very long time

[dependencies]
hex = "0.4"
futures = "0.3"
openssl = "0.10.28"
prost = "0.6"
rand = "0.7.3"
bytes = "0.4"
tonic = "0.1.1"
log = "0.4"
simplelog = "^0.7.4"
lazy_static = "1.4.0"
tokio = { version = "0.2.13", features = [ "macros", "signal", "sync", "rt-threaded", "process" ] }
rug = { version = "1.7", features = [ "serde" ] }
async-trait = "0.1.26"
chrono = "0.4"
futures-retry = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.1.1", features = ["max_level_trace", "release_max_level_debug"] }
slog-term = "2.4.0"
port_check = "0.1.5"
derivative = "2.0.2"  # https://github.com/rust-lang/rust/issues/26925
itertools = "0.9.0"
clap = { git = "http://github.com/clap-rs/clap/", rev = "37889c661134e8286102f7d2ab3267965d010403" }
csv = "1.1"
rusoto_core = "0.43.0"
etcd-rs = { git = "http://github.com/znewman01/etcd-rs/", branch = "lazy_tunnels" }
tempfile = "3"
blake3 = "0.3.0"
tsunami = { git = "http://github.com/znewman01/tsunami/", rev = "d473f287fd74b6464d44c5b2f0be1b71f7ec972d" }
sessh = "0.2.0"
failure = "0.1.7"

[build-dependencies]
tonic-build = "0.1.1"

[dev-dependencies]
proptest = "0.9.4"
proptest-derive = "0.1.2"
criterion = "0.3.0"

[[bench]]
name = "crypto_benchmarks"
harness = false
