[package]
name = "experiments"
version = "0.1.0"
authors = ["Zachary Newman <zjn@mit.edu>", "Sacha Servan-Schreiber <3s@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "http://github.com/clap-rs/clap/", rev = "37889c661134e8286102f7d2ab3267965d010403" }
envsubst = "0.2.0"
failure = "0.1.7"
itertools = "0.9.0"
rayon = "1.0.0"
rusoto_core = "0.43.0"
rusoto_s3 = "0.43.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sessh = "0.2.0"
slog-term = "2.4.0"
slog = { version = "2.1.1", features = ["max_level_trace", "release_max_level_debug"] }
tokio = { version = "0.2.16", features = [ "macros", "signal", "sync", "rt-threaded", "process" ] }
tempfile = "3"
tsunami = { git = "http://github.com/znewman01/tsunami/", rev = "8c91e80513f6c587621d2ac30a88e8ed046e2430" }
