[package]
name = "spectrum-impl"
version = "0.1.1"
authors = ["Zachary Newman <zjn@mit.edu>", "Sacha Servan-Schreiber <3s@mit.edu>"]
edition = "2018"

[features]
default = []
etcd-tests = []  # run etcd integration tests

[dependencies]
futures = "0.3"
prost = "0.6"
rand = "0.7.3"
tonic = "0.3"
log = "0.4"
simplelog = "^0.7.4"
lazy_static = "1.4.0"
tokio = { version = "0.2.22", features = [ "macros", "signal", "sync", "rt-threaded", "process" ] }
async-trait = "0.1.38"
chrono = "0.4"
futures-retry = "0.4"
rug = { version = "1.10", features = [ "serde" ] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
port_check = "0.1.5"
derivative = "2.0.2"  # https://github.com/rust-lang/rust/issues/26925
itertools = "0.9.0"
clap = { git = "http://github.com/clap-rs/clap/", rev = "37889c661134e8286102f7d2ab3267965d010403" }
csv = "1.1"
etcd-rs = "0.2.2"
tempfile = "3"
spectrum_primitives = { path = "../spectrum_primitives" }
spectrum_protocol = { path = "../spectrum_protocol" }

[build-dependencies]
tonic-build = "0.2.0"

[dev-dependencies]
proptest = "0.9.6"
proptest-derive = "0.1.2"
criterion = "0.3.0"
spectrum_primitives = { path = "../spectrum_primitives", features = [ "testing" ] }
spectrum_protocol = { path = "../spectrum_protocol", features = [ "testing" ] }

[[bench]]
name = "crypto_benchmarks"
harness = false
