[package]
name = "spectrum_primitives"
version = "0.1.0"
authors = ["Zachary Newman <zjn@mit.edu>", "Sacha Servan-Schreiber <3s@mit.edu>"]
edition = "2018"

[features]
testing = ["proptest"]
proto = ["tonic", "prost"]

[dependencies]
blake3 = "0.3.0"
jubjub = "0.4"
derivative = "2.0.2"  # https://github.com/rust-lang/rust/issues/26925
itertools = "0.9.0"
rand = "0.7.3"
rug = { version = "1.10", features = [ "serde" ] }
serde = { version = "1.0", features = ["derive", "rc"] }  # TODO: feature-gate
tonic = { version = "0.3", optional = true }
prost = { version = "0.6", optional = true }
openssl = "0.10"
proptest = { version = "0.9.6", optional = true }
serde_json = { version = "1.0", optional = true }

[build-dependencies]
tonic-build = "0.2.0"

[dev-dependencies]
proptest = "0.9.6"
criterion = "0.3.0"
serde_json = "1.0"

[[bench]]
name = "crypto_benchmarks"
harness = false
