[package]
name = "spectrum_protocol"
version = "0.1.0"
authors = ["Zachary Newman <zjn@mit.edu>", "Sacha Servan-Schreiber <3s@mit.edu>"]
edition = "2018"

[features]
testing = ["proptest"]
proto = ["tonic", "prost"]

[dependencies]
spectrum_primitives = { path = "../spectrum_primitives" }
derivative = "2.2.0"  # https://github.com/rust-lang/rust/issues/26925
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = { version = "1.1", features = [ "sync" ] }
tonic = { version = "0.4", optional = true }
prost = { version = "0.7", optional = true }
proptest = { version = "0.9.6", optional = true }

[dev-dependencies]
proptest = "0.9.6"
tokio = { version = "1.1", features = [ "macros", "sync", "rt" ] }
spectrum_primitives = { path = "../spectrum_primitives", features = [ "testing" ] }

[build-dependencies]
tonic-build = "0.4.0"
