[package]
name = "spectrum_protocol"
version = "0.1.0"
authors = ["Zachary Newman <zjn@mit.edu>", "Sacha Servan-Schreiber <3s@mit.edu>"]
edition = "2018"

[features]
testing = ["proptest", "proptest-derive"]
proto = ["prost", "prost-build"]

[dependencies]
spectrum_primitives = { path = "../spectrum_primitives" }
serde = { version = "1.0", features = ["derive", "rc"] }

# Feature: proto
prost = { version = "0.7", optional = true }

# Feature: testing
proptest = { version = "0.9.6", optional = true }
proptest-derive = { version = "0.3.0", optional = true }

[dev-dependencies]
proptest = "0.9.6"
proptest-derive = "0.3.0"
spectrum_primitives = { path = "../spectrum_primitives", features = [ "testing" ] }

[build-dependencies]
prost-build = { version = "0.7.0", optional = true }
